--- a/wiki/Uso.wiki
+++ b/wiki/Uso.wiki
@@ -26,3 +26,22 @@ opciones? Analisis que vamos a ejecutar
     --seguridadssh Verificamos las variables del servicio sshd 
 
     --todos Ejecutamos todos los analisis 
+
+
+situ@tux ~/ $ perl checklist.pl --usuariodefault
+`-----------------------------------------------------------------------------------
+Sistema Operativo: Linux
+Release del Kernel: 2.6.31-21-generic
+Hostname: tux
+Datos Adicionales: Linux tux 2.6.31-21-generic #59-Ubuntu SMP Wed Mar 24 07:28:56 UTC 2010 i686 GNU/Linux
+-----------------------------------------------------------------------------------
+ -- Verificación de usuarios default
+-----------------------------------------------------------------------------------
+Negativo: El usuario lp existe
+Negativo: El usuario uucp existe
+Negativo: El usuario games existe
+-----------------------------------------------------------------------------------
+Información: Se da por finalizado el proceso de chequeo
+Información: El reporte fue salvado con el nombre: tux-02-02-2011.html
+Información: Las recomendaciones fueron guardadas en el archivo: tux-02-02-2011-recomendacion.html
+-----------------------------------------------------------------------------------`
